@@ -1,129 +1,117 @@
 package com.bht.meditrack.Patientenverwaltung.domain.model;
 
+import com.bht.meditrack.Patientenverwaltung.domain.valueojects.Krankenkasse;
+import com.bht.meditrack.shared.domain.valueobjects.Adresse;
+import com.bht.meditrack.shared.domain.valueobjects.Kontaktdaten;
+import com.bht.meditrack.shared.domain.valueobjects.Personendaten;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
+import java.time.LocalDate;
+import java.util.UUID;
+import java.util.regex.Pattern;
+
 import static org.assertj.core.api.Assertions.assertThat;
 
 class PatientTest {
 
-    /*
     private Patient patient;
+
     @BeforeEach
     void setUp() {
-        patient = new Patient(
-                null,
-                new Krankenkasse("AOK"),
-                "123456789012",
-                new Personendaten("Max", "Mustermann", "Dr.", LocalDate.of(1985, 5, 20)),
-                new Kontaktdaten("max.mustermann@example.com","491234567890"),
-                new Adresse("Musterstraße", "1", "12345", "Musterstadt")
-        );
+        patient = new Patient();
+        patient.setId(UUID.randomUUID());
+        patient.setKrankenkasse(new Krankenkasse1("AOK"));
+        patient.setKrankenversicherungsnummer("123456789012");
+        patient.setPersonendaten(new Personendaten("Max", "Mustermann", "Dr.", LocalDate.of(1985, 5, 20)));
+        patient.setKontaktdaten(new Kontaktdaten("max.mustermann@example.com", "01234567890"));
+        patient.setAdresse(new Adresse("Musterstraße", "1", "12345", "Musterstadt"));
     }
-    // Test für Getter und Setter der Klasse
+
     @Test
     void testGettersAndSetters() {
         assertThat(patient.getPersonendaten().firstName()).isEqualTo("Max");
         assertThat(patient.getPersonendaten().lastName()).isEqualTo("Mustermann");
-        assertThat(patient.getKrankenkasse()).isEqualTo(new Krankenkasse("AOK"));
+        assertThat(patient.getKrankenkasse().krankenkasse()).isEqualTo("AOK");
         assertThat(patient.getKrankenversicherungsnummer()).isEqualTo("123456789012");
-        patient.setKrankenkasse(new Krankenkasse("Techniker"));
+
+        patient.setKrankenkasse(new Krankenkasse1("Techniker"));
         patient.setKrankenversicherungsnummer("987654321098");
-        assertThat(patient.getKrankenkasse()).isEqualTo(new Krankenkasse("Techniker"));
+
+        assertThat(patient.getKrankenkasse().krankenkasse()).isEqualTo("Techniker");
         assertThat(patient.getKrankenversicherungsnummer()).isEqualTo("987654321098");
     }
-    // Test für Krankenkasse und Versicherungsnummer mit Regex
+
     @Test
     void testKrankenkasseAndVersicherungsnummerFormat() {
-        // Regex für gültige Krankenkasse (beispielsweise nur Buchstaben)
         Pattern krankenkassePattern = Pattern.compile("^[A-Za-z]+$");
         assertThat(krankenkassePattern.matcher(patient.getKrankenkasse().krankenkasse()).matches()).isTrue();
-        // Test für ungültige Krankenkasse
-        patient.setKrankenkasse(new Krankenkasse("AOK123"));
+
+        patient.setKrankenkasse(new Krankenkasse1("AOK123"));
         assertThat(krankenkassePattern.matcher(patient.getKrankenkasse().krankenkasse()).matches()).isFalse();
-        // Regex für gültige Versicherungsnummer (numerisch, 12 Ziffern)
+
         Pattern versicherungsnummerPattern = Pattern.compile("^\\d{12}$");
         assertThat(versicherungsnummerPattern.matcher(patient.getKrankenversicherungsnummer()).matches()).isTrue();
-        // Test für ungültige Versicherungsnummer
+
         patient.setKrankenversicherungsnummer("12345ABC");
         assertThat(versicherungsnummerPattern.matcher(patient.getKrankenversicherungsnummer()).matches()).isFalse();
     }
-    // Test für das Aggregat-Root des Patienten (DDD-Modell)
+
     @Test
     void testPatientAsAggregateRoot() {
-        // Im DDD sind Entitäten wie Patient Aggregate-Roots und sollten alle Geschäftsfunktionen enthalten
-        // Hier prüfen wir, ob der Patient korrekt als Aggregat behandelt wird, indem wir ein neues Objekt erstellen und sicherstellen, dass es ein konsistentes Aggregat ist.
-        UUID originalId = patient.getId(); // ID bleibt beim Erstellen von Patienten gleich
-        assertThat(originalId).isNull();
-        // Setze eine neue ID und überprüfe
+        UUID originalId = patient.getId();
+        assertThat(originalId).isNotNull();
+
         patient.setId(UUID.randomUUID());
         assertThat(patient.getId()).isNotNull();
     }
-    // Test für eine Liste von Patienten, mit Streams und Lambdas
+
     @Test
     void testPatientListWithStreamsAndLambdas() {
-        // Eine Liste von Patienten erstellen
-        List<Patient> patients = Arrays.asList(
-                new Patient(
-                        new UUID(2,3),
-                        new Krankenkasse("AOK"),"123456789012",
+        List<Patient> patients = List.of(
+                new Patient(UUID.randomUUID(), new Krankenkasse1("AOK"), "123456789012",
                         new Personendaten("Max", "Mustermann", "Dr.", LocalDate.of(1985, 5, 20)),
-                        new Kontaktdaten("max.mustermann@example.com","+491234567890"),
-                        new Adresse("Musterstraße","1","11111","test")
-                ),
-                new Patient(
-                        new UUID(2,3),
-                        new Krankenkasse("TK"),"987654321098",
+                        new Kontaktdaten("max.mustermann@example.com", "01234567890"),
+                        new Adresse("Musterstraße", "1", "12345", "Musterstadt")),
+                new Patient(UUID.randomUUID(), new Krankenkasse1("TK"), "987654321098",
                         new Personendaten("Anna", "Anders", "Prof.", LocalDate.of(1990, 2, 10)),
-                        new Kontaktdaten("anna.anders@example.com","+4987654321"),
-                        new Adresse("Hauptstraße","2","22222","test")
-                ),
-                new Patient(
-                        new UUID(2,3),
-                        new Krankenkasse("AOK"),"112233445566",
+                        new Kontaktdaten("anna.anders@example.com", "087654321"),
+                        new Adresse("Hauptstraße", "2", "22222", "Musterstadt")),
+                new Patient(UUID.randomUUID(), new Krankenkasse1("AOK"), "112233445566",
                         new Personendaten("Erika", "Meier", "Dr.", LocalDate.of(1980, 3, 5)),
-                        new Kontaktdaten("erika.meier@example.com","+4976543210"),
-                        new Adresse("Nebenstraße","3","33333","test")
-                )
+                        new Kontaktdaten("erika.meier@example.com", "076543210"),
+                        new Adresse("Nebenstraße", "3", "33333", "Musterstadt"))
         );
-        // Filtere die Liste der Patienten, die die AOK als Krankenkasse haben
-        List<Patient> aokPatients = new ArrayList<>();
-        patients.stream()
-                .filter(p -> new Krankenkasse("AOK").equals(p.getKrankenkasse()))  // Filtere nach AOK
-                .forEach(aokPatients::add);
+
+        List<Patient> aokPatients = patients.stream()
+                .filter(p -> "AOK".equals(p.getKrankenkasse().krankenkasse()))
+                .toList();
+
         assertThat(aokPatients).hasSize(2);
-        assertThat(aokPatients).extracting(Patient::getKrankenkasse).containsOnly(new Krankenkasse("AOK"));
+        assertThat(aokPatients).extracting(Patient::getKrankenkasse).extracting(Krankenkasse1::krankenkasse).containsOnly("AOK");
     }
-    // Test für die Umwandlung einer Liste von Patienten in ein Set (Verwendung von Generics)
+
     @Test
     void testPatientListToSet() {
-        //ToDo: Test anpassen, Fehler!
-
-        List<Patient> patients = Arrays.asList(
-                new Patient(
-                        new UUID(2,3),
-                        new Krankenkasse("AOK"),"123456789012",
+        List<Patient> patients = List.of(
+                new Patient(UUID.randomUUID(), new Krankenkasse1("AOK"), "123456789012",
                         new Personendaten("Max", "Mustermann", "Dr.", LocalDate.of(1985, 5, 20)),
-                        new Kontaktdaten("max.mustermann@example.com","+491234567890"),
-                        new Adresse("Musterstraße","1","11111","test")
-                ),
-                new Patient(
-                        UUID.fromString("550e8400-e29b-41d4-a716-446655440000"),
-                        new Krankenkasse("TK"),"987654321098",
+                        new Kontaktdaten("max.mustermann@example.com", "01234567890"),
+                        new Adresse("Musterstraße", "1", "12345", "Musterstadt")),
+                new Patient(UUID.fromString("550e8400-e29b-41d4-a716-446655440000"), new Krankenkasse1("TK"), "987654321098",
                         new Personendaten("Anna", "Anders", "Prof.", LocalDate.of(1990, 2, 10)),
-                        new Kontaktdaten("anna.anders@example.com","+4987654321"),
-                        new Adresse("Hauptstraße","2","22222","test")
-                ),
-                new Patient(
-                        UUID.fromString("550e8400-e29b-41d4-a716-446655440000"),
-                        new Krankenkasse("TK"),"987654321098",
+                        new Kontaktdaten("anna.anders@example.com", "087654321"),
+                        new Adresse("Hauptstraße", "2", "22222", "Musterstadt")),
+                new Patient(UUID.fromString("550e8400-e29b-41d4-a716-446655440000"), new Krankenkasse1("TK"), "987654321098",
                         new Personendaten("Anna", "Anders", "Prof.", LocalDate.of(1990, 2, 10)),
-                        new Kontaktdaten("anna.anders@example.com","+4987654321"),
-                        new Adresse("Hauptstraße","2","22222","test")
-                )
+                        new Kontaktdaten("anna.anders@example.com", "087654321"),
+                        new Adresse("Hauptstraße", "2", "22222", "Musterstadt"))
         );
-        // Verwende Streams, um die Patienten-Liste in ein Set zu konvertieren (doppelte Patienten entfernen)
+
         Set<Patient> uniquePatients = new HashSet<>(patients);
-        assertThat(uniquePatients).hasSize(3);//anpassen, wenn funktionsfähig // Nur zwei Patienten, da der zweite Max als Duplikat entfernt wird
+        assertThat(uniquePatients).hasSize(3);
     }
-
-
-     */
 }
